[gd_scene load_steps=3 format=3 uid="uid://d3i5114fbdojh"]

[ext_resource type="Script" path="res://world/room_connector.gd" id="1_atfta"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hgepw"]
size = Vector3(4, 4, 4)

[node name="RoomConnector" type="Area3D"]
collision_layer = 0
collision_mask = 3
input_ray_pickable = false
monitorable = false
script = ExtResource("1_atfta")
auto_door = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_hgepw")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
